mutants.out/log/src__proto__batch__mod.rs_line_208_col_9.log

*** src/proto/batch/mod.rs:208:9: replace <impl Clone for BatchBuilder>::clone -> Self with Default::default()

*** mutation diff:
--- src/proto/batch/mod.rs
+++ replace <impl Clone for BatchBuilder>::clone -> Self with Default::default()
@@ -200,22 +200,17 @@
         b.success = Some(success_cb);
         b.complete = Some(complete_cb);
         b
     }
 }
 
 impl Clone for BatchBuilder {
     fn clone(&self) -> Self {
-        BatchBuilder {
-            parent_bid: self.parent_bid.clone(),
-            description: self.description.clone(),
-            success: self.success.clone(),
-            complete: self.complete.clone(),
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 #[cfg(test)]
 mod test {
     use std::str::FromStr;
 
     use chrono::{DateTime, Utc};


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
    Finished dev [unoptimized + debuginfo] target(s) in 0.03s

*** result: Success

*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml --locked --all-features --all-targets
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0277]: the trait bound `BatchBuilder: Default` is not satisfied
   --> src/proto/batch/mod.rs:208:9
    |
208 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `BatchBuilder`
    |
help: consider annotating `BatchBuilder` with `#[derive(Default)]`
    |
125 | #[derive(#[derive(Default)]
    |          ++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `batch::BatchBuilder: Default` is not satisfied
   --> src/proto/batch/mod.rs:208:9
    |
208 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `batch::BatchBuilder`
    |
help: consider annotating `batch::BatchBuilder` with `#[derive(Default)]`
    |
125 | #[derive(#[derive(Default)]
    |          ++++++++++++++++++

error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
